Bug 1553929: Make some attempt to correctly match default profiles after profiles.ini has been manually edited by the user. r=froydnj a=jcristau

Reviewers: froydnj

Reviewed By: froydnj

Subscribers: reviewbot

Bug #: 1553929

Differential Revision: https://phabricator.services.mozilla.com/D34038